Added VehicleStaionsController and edited model annotations

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,9 +30,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="VehicleControlStations" asp-action="Index">Stacje Kontroli Pojazdów</a></li>
+                    <li><a asp-area="" asp-controller="VehicleCards" asp-action="Index">Karta Pojazdu</a></li>
                 </ul>
             </div>
         </div>
