--- a/Views/VehicleControlStations/Create.cshtml
+++ b/Views/VehicleControlStations/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Dodaj nową stacje kontroli pojazdu</h2>
 
-<h4>VehicleControlStation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,14 +25,14 @@
                 <select asp-for="AddressID" class ="form-control" asp-items="ViewBag.AddressID"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Dodaj" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Powrót do listy</a>
 </div>
 
 @section Scripts {
