--- a/Views/VehicleCards/Create.cshtml
+++ b/Views/VehicleCards/Create.cshtml
@@ -21,6 +21,11 @@
                 <span asp-validation-for="ExpirationData" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Vehicles" class="control-label"></label>
+                <input asp-for="Vehicles" class="form-control" />
+                <span asp-validation-for="Vehicles" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Dodaj" class="btn btn-default" />
             </div>
         </form>
