--- a/Views/VehicleCards/Index.cshtml
+++ b/Views/VehicleCards/Index.cshtml
@@ -9,6 +9,13 @@
 <p>
     <a asp-action="Create">Dodaj karte</a>
 </p>
+
+<form asp-controller="VehicleCards" asp-action="Index" method="get">
+    <p>
+        Seria i numer karty: <input type="text" name="SearchString">
+        <input type="submit" value="Wyszukaj" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
