added: Vehical registration and Car registration

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="VehicleControlStations" asp-action="Index">Stacje Kontroli Pojazdów</a></li>
                     <li><a asp-area="" asp-controller="VehicleCards" asp-action="Index">Karta Pojazdu</a></li>
+                    <li><a asp-area="" asp-controller="Vehicles" asp-action="Index">Rejestracja Pojazdu</a></li>
+                    <li><a asp-area="" asp-controller="Cars" asp-action="Index">Pojazdy</a></li>
                 </ul>
             </div>
         </div>
