Update: Vehicle registration, Car registraction, Fields translation

--- a/Views/Vehicles/Details.cshtml
+++ b/Views/Vehicles/Details.cshtml
@@ -39,10 +39,10 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.VehicleCard.Number)
+            @Html.DisplayFor(model => model.VehicleCard.SeriesAndNumber)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.VehicleCard.Number)
+            @Html.DisplayNameFor(model => model.VehicleCard.SeriesAndNumber)
         </dt>
 
         <dd>
