--- a/Views/Vehicles/Index.cshtml
+++ b/Views/Vehicles/Index.cshtml
@@ -122,7 +122,7 @@
                     @Html.DisplayFor(modelItem => item.TechnicalResearch.TechnicalResearchID)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.VehicleCard.Number)
+                    @Html.DisplayFor(modelItem => item.VehicleCard.SeriesAndNumber)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.VehicleID">Edytuj</a> |
