--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -34,6 +35,15 @@
                     <li><a asp-area="" asp-controller="VehicleCards" asp-action="Index">Karta Pojazdu</a></li>
                     <li><a asp-area="" asp-controller="Vehicles" asp-action="Index">Rejestracja Pojazdu</a></li>
                     <li><a asp-area="" asp-controller="Cars" asp-action="Index">Pojazdy</a></li>
+                    @if (Context.Session.GetString("ID") != null)
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Logout">Wyloguj</a></li>
+                    }
+                    else
+                    {
+                        <li><a asp-area="" asp-controller="Home" asp-action="Register">Zarejestruj</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Login">Zaloguj</a></li>
+                    }
                 </ul>
             </div>
         </div>
