--- a/Views/VehicleCards/Create.cshtml
+++ b/Views/VehicleCards/Create.cshtml
@@ -13,7 +13,7 @@
             <span asp-validation-for="SeriesAndNumber" class="text-danger"></span>
             <div class="form-group">
                 <label asp-for="SeriesAndNumber" class="control-label"></label>
-                <input asp-for="SeriesAndNumber" class="form-control" />             
+                <input asp-for="SeriesAndNumber" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="ExpirationData" class="control-label"></label>
@@ -21,9 +21,9 @@
                 <span asp-validation-for="ExpirationData" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Vehicles" class="control-label"></label>
-                <input asp-for="Vehicles" class="form-control" />
-                <span asp-validation-for="Vehicles" class="text-danger"></span>
+                <label asp-for="VIN" class="control-label"></label>
+                <input asp-for="VIN" class="form-control" />
+                <span asp-validation-for="VIN" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Dodaj" class="btn btn-default" />
@@ -39,3 +39,7 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
+
+
