--- a/Views/VehicleCards/Details.cshtml
+++ b/Views/VehicleCards/Details.cshtml
@@ -7,6 +7,7 @@
 <h2>Szczegoly karty pojazdu</h2>
 
 <div>
+    <h4>VehicleCard</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,6 +21,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ExpirationData)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.VIN)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.VIN)
         </dd>
     </dl>
 </div>
