--- a/Views/VehicleCards/Edit.cshtml
+++ b/Views/VehicleCards/Edit.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="ExpirationData" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="VIN" class="control-label"></label>
+                <input asp-for="VIN" class="form-control" />
+                <span asp-validation-for="VIN" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Zapisz" class="btn btn-default" />
             </div>
         </form>
