--- a/Views/VehicleCards/Index.cshtml
+++ b/Views/VehicleCards/Index.cshtml
@@ -9,7 +9,6 @@
 <p>
     <a asp-action="Create">Dodaj karte</a>
 </p>
-
 <form asp-controller="VehicleCards" asp-action="Index" method="get">
     <p>
         Seria i numer karty: <input type="text" name="SearchString">
@@ -25,6 +24,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.ExpirationData)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.VIN)
+                </th>
             <th></th>
         </tr>
     </thead>
@@ -36,6 +38,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ExpirationData)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.VIN)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.VehicleCardID">Edytuj</a> |
