--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -5,26 +5,26 @@
 
 <h2>Logowanie</h2>
 
-<form class="form-horizontal" asp-controller="Home" asp-action="Login" method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="UserName" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="UserName" class="form-control" />
-            <spam asp-validation-for="Username" class="text-danger"></spam>
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Password" class="form-control" />
-            <spam asp-validation-for="Password" class="text-danger"></spam>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-10">
-            <button type="submit" class="btn btn-default">Zaloguj</button>
-        </div>
-    </div>
- 
-</form>
+        <form class="form-horizontal" asp-controller="Home" asp-action="Login" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="UserName" class="col-md-2 control-label"></label>
+                <div class="col-md-4">
+                    <input asp-for="UserName" class="form-control" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="col-md-2 control-label"></label>
+                <div class="col-md-4">
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    <button type="submit" class="btn btn-default">Zaloguj</button>
+                </div>
+            </div>
+        </form>
+    
