--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -15,23 +15,23 @@
         }
         <div class="form-group">
             <label asp-for="Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
+            <div class="col-md-4">
                 <input asp-for="Name" class="form-control" />
-                <spam asp-validation-for="Name" class="text-danger"></spam>
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="UserName" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
+            <div class="col-md-4">
                 <input asp-for="UserName" class="form-control" />
-                <spam asp-validation-for="UserName" class="text-danger"></spam>
+                <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="Password" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
+            <div class="col-md-4">
                 <input asp-for="Password" class="form-control" />
-                <spam asp-validation-for="Password" class="text-danger"></spam>
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
@@ -41,3 +41,6 @@
         </div>
     </form>
 </div>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
