Added validation and changes in vehicle control station form

--- a/Views/VehicleControlStations/Details.cshtml
+++ b/Views/VehicleControlStations/Details.cshtml
@@ -32,9 +32,9 @@
             Adres siedziby
         </dt>
         <dd>
-            @*@Model.Entrepreneur.Address.PostalCode @Model.Entrepreneur.Address.City ul. @Model.Entrepreneur.Address.Street @Model.Entrepreneur.Address.HouseNumber
+            @Model.Entrepreneur.Address.PostalCode @Model.Entrepreneur.Address.City ul. @Model.Entrepreneur.Address.Street @Model.Entrepreneur.Address.HouseNumber
                 <br />
-                Woj. @Model.Entrepreneur.Address.Voivodeship @Model.Entrepreneur.Address.Commune*@
+                Woj. @Model.Entrepreneur.Address.Voivodeship @Model.Entrepreneur.Address.Commune
         </dd>
 
         <br />
