--- a/Views/VehicleControlStations/Create.cshtml
+++ b/Views/VehicleControlStations/Create.cshtml
@@ -14,95 +14,95 @@
 
             <h4>Stacja kontroli pojazdów</h4>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="@Model.Name" class="control-label"></label>
+                <input asp-for="@Model.Name" class="form-control" />
+                <span asp-validation-for="@Model.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address.PostalCode" class="control-label"></label>
-                <input asp-for="Address.PostalCode" class="form-control" />
-                <span asp-validation-for="Address.PostalCode" class="text-danger"></span>
+                <label asp-for="@Model.Address.PostalCode" class="control-label"></label>
+                <input asp-for="@Model.Address.PostalCode" class="form-control" />
+                <span asp-validation-for="@Model.Address.PostalCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address.City" class="control-label"></label>
-                <input asp-for="Address.City" class="form-control" />
-                <span asp-validation-for="Address.City" class="text-danger"></span>
+                <label asp-for="@Model.Address.City" class="control-label"></label>
+                <input asp-for="@Model.Address.City" class="form-control" />
+                <span asp-validation-for="@Model.Address.City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address.Street" class="control-label"></label>
-                <input asp-for="Address.Street" class="form-control" />
-                <span asp-validation-for="Address.Street" class="text-danger"></span>
+                <label asp-for="@Model.Address.Street" class="control-label"></label>
+                <input asp-for="@Model.Address.Street" class="form-control" />
+                <span asp-validation-for="@Model.Address.Street" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address.HouseNumber" class="control-label"></label>
-                <input asp-for="Address.HouseNumber" class="form-control" />
-                <span asp-validation-for="Address.HouseNumber" class="text-danger"></span>
+                <label asp-for="@Model.Address.HouseNumber" class="control-label"></label>
+                <input asp-for="@Model.Address.HouseNumber" class="form-control" />
+                <span asp-validation-for="@Model.Address.HouseNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address.Voivodeship" class="control-label"></label>
-                <input asp-for="Address.Voivodeship" class="form-control" />
-                <span asp-validation-for="Address.Voivodeship" class="text-danger"></span>
+                <label asp-for="@Model.Address.Voivodeship" class="control-label"></label>
+                <input asp-for="@Model.Address.Voivodeship" class="form-control" />
+                <span asp-validation-for="@Model.Address.Voivodeship" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address.Commune" class="control-label"></label>
-                <input asp-for="Address.Commune" class="form-control" />
-                <span asp-validation-for="Address.Commune" class="text-danger"></span>
+                <label asp-for="@Model.Address.Commune" class="control-label"></label>
+                <input asp-for="@Model.Address.Commune" class="form-control" />
+                <span asp-validation-for="@Model.Address.Commune" class="text-danger"></span>
             </div>
         </div>
         <div class="col-md-4 col-md-offset-2">
             <h4>Przedsiębiorca</h4>
             
             <div class="form-group">
-                <label asp-for="Entrepreneur.NIP" class="control-label"></label>
-                <input asp-for="Entrepreneur.NIP" class="form-control" />
-                <span asp-validation-for="Entrepreneur.NIP" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.NIP" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.NIP" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.NIP" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Entrepreneur.Name" class="control-label"></label>
-                <input asp-for="Entrepreneur.Name" class="form-control" />
-                <span asp-validation-for="Entrepreneur.Name" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.Name" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.Name" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Entrepreneur.Surname" class="control-label"></label>
-                <input asp-for="Entrepreneur.Surname" class="form-control" />
-                <span asp-validation-for="Entrepreneur.Surname" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.Surname" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.Surname" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.Surname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Entrepreneur.Address.PostalCode" class="control-label"></label>
-                <input asp-for="Entrepreneur.Address.PostalCode" class="form-control" />
-                <span asp-validation-for="Entrepreneur.Address.PostalCode" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.Address.PostalCode" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.Address.PostalCode" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.Address.PostalCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Entrepreneur.Address.City" class="control-label"></label>
-                <input asp-for="Entrepreneur.Address.City" class="form-control" />
-                <span asp-validation-for="Entrepreneur.Address.City" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.Address.City" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.Address.City" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.Address.City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Entrepreneur.Address.Street" class="control-label"></label>
-                <input asp-for="Entrepreneur.Address.Street" class="form-control" />
-                <span asp-validation-for="Entrepreneur.Address.Street" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.Address.Street" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.Address.Street" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.Address.Street" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Entrepreneur.Address.HouseNumber" class="control-label"></label>
-                <input asp-for="Entrepreneur.Address.HouseNumber" class="form-control" />
-                <span asp-validation-for="Entrepreneur.Address.HouseNumber" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.Address.HouseNumber" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.Address.HouseNumber" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.Address.HouseNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Entrepreneur.Address.Voivodeship" class="control-label"></label>
-                <input asp-for="Entrepreneur.Address.Voivodeship" class="form-control" />
-                <span asp-validation-for="Entrepreneur.Address.Voivodeship" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.Address.Voivodeship" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.Address.Voivodeship" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.Address.Voivodeship" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Entrepreneur.Address.Commune" class="control-label"></label>
-                <input asp-for="Entrepreneur.Address.Commune" class="form-control" />
-                <span asp-validation-for="Entrepreneur.Address.Commune" class="text-danger"></span>
+                <label asp-for="@Model.Entrepreneur.Address.Commune" class="control-label"></label>
+                <input asp-for="@Model.Entrepreneur.Address.Commune" class="form-control" />
+                <span asp-validation-for="@Model.Entrepreneur.Address.Commune" class="text-danger"></span>
             </div>
         </div>
         <br />
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <h4>Lista zatrudnionych diagnostyków</h4>
-                <table>
+                <table id="diagnosticians-table">
                     <thead>
                         <tr>
                             <th>
@@ -120,36 +120,39 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr id="diagnosticians_input_table">
                             <td>
                                 1.
                             </td>
                             <td>
                                 <div class="form-group">
-                                    <input asp-for="Diagnosticians.ElementAt(0).NumberOfPremissions" class="form-control" />
+                                    <input asp-for="@Model.Diagnosticians[0].NumberOfPremissions" class="form-control" />
+                                    <span asp-validation-for="@Model.Diagnosticians[0].NumberOfPremissions" class="text-danger"></span>
                                 </div>
                             </td>
                             <td>
                                 <div class="form-group">
-                                    <input asp-for="Diagnosticians.ElementAt(0).Name" class="form-control" />
+                                    <input asp-for="@Model.Diagnosticians[0].Name" class="form-control" />
+                                    <span asp-validation-for="@Model.Diagnosticians[0].Name" class="text-danger"></span>
                                 </div>
                             </td>
                             <td>
                                 <div class="form-group">
-                                    <input asp-for="Diagnosticians.ElementAt(0).Surname" class="form-control" />
+                                    <input asp-for="@Model.Diagnosticians[0].Surname" class="form-control" />
+                                    <span asp-validation-for="@Model.Diagnosticians[0].Surname" class="text-danger"></span>
                                 </div>
                             </td>
                         </tr>
                     </tbody>
                 </table>
-                <a href="#">Dodaj nowego diagnostyka</a>
+                <a href="#diagnosticians_input_table" onclick="addDiagnosticianRow()">Dodaj nowego diagnostyka</a>
             </div>
         </div>
         <br />
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <h4>Zakres badań technicznych</h4>
-                <table>
+                <table id="services-table">
                     <thead>
                         <tr>
                             <th>
@@ -165,13 +168,14 @@
                             </td>
                             <td>
                                 <div class="form-group">
-                                    <input asp-for="Services.ElementAt(0).Name" class="form-control" />
+                                    <input asp-for="@Model.Services[0].Name" class="form-control" />
+                                    <span asp-validation-for="@Model.Services[0].Name" class="text-danger"></span>
                                 </div>
                             </td>
                         </tr>
                     </tbody>
                 </table>
-                <a href="#">Dodaj nową usługę</a>
+                <a href="#services-table" onclick="addServiceRow()">Dodaj nową usługę</a>
             </div>
         </div>
         <div class="form-group col-md-offset-10">
@@ -184,6 +188,41 @@
     <a asp-action="Index">Powrót do listy</a>
 </div>
 
+<script>
+    function addDiagnosticianRow() {
+        var tableRef = document.getElementById('diagnosticians-table').getElementsByTagName('tbody')[0];
+        
+        var newRow = tableRef.insertRow(tableRef.rows.length);
+        
+        var lpCell = newRow.insertCell(0);
+        var numberOfPremissions = newRow.insertCell(1);
+        var name = newRow.insertCell(2);
+        var surname = newRow.insertCell(3);
+
+        var lp = tableRef.rows.length;
+        var arrayLp = lp-1;
+        // Append a text node to the cell
+        lpCell.innerHTML = lp +'.';
+        numberOfPremissions.innerHTML = '<div class="form-group"><input class="form-control valid" data-val="true" data-val-regex="Numer uprawnień nie zgodny z formatem (4 cyfry)" data-val-regex-pattern="^[0-9]{4}" data-val-required="Nie podano numeru uprawnień diagnostyka" id="Diagnosticians_'+arrayLp+'__NumberOfPremissions" name="Diagnosticians['+arrayLp+'].NumberOfPremissions" value="" aria-required="true" aria-invalid="false" aria-describedby="Diagnosticians_'+arrayLp+'__NumberOfPremissions-error" type="number"></div>';
+        name.innerHTML = '<div class="form-group"><input class="form-control" data-val="true" data-val-required="Nie podano imienia diagnostyka" id="Diagnosticians_' + arrayLp + '__Name" name="Diagnosticians[' + arrayLp +'].Name" value="" type="text"></div>';
+        surname.innerHTML = '<div class="form-group"><input class="form-control" data-val="true" data-val-required="Nie podano nazwiska diagnostyka" id="Diagnosticians_' + arrayLp + '__Surname" name="Diagnosticians[' + arrayLp +'].Surname" value="" type="text"></div>';
+    }
+
+    function addServiceRow() {
+        var tableRef = document.getElementById('services-table').getElementsByTagName('tbody')[0];
+
+        var newRow = tableRef.insertRow(tableRef.rows.length);
+
+        var lpCell = newRow.insertCell(0);
+        var service = newRow.insertCell(1);
+
+        var lp = tableRef.rows.length;
+        var arrayLp = lp - 1;
+        // Append a text node to the cell
+        lpCell.innerHTML = lp + '.';
+        service.innerHTML = '<div class="form-group"><input class="form-control" data-val="true" data-val-required="Nie podano nazwy usługi !" id="Services_' + arrayLp + '__Name" name="Services[' + arrayLp +'].Name" value="Wymiana kół" type="text"></div>'
+    }
+</script>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
