--- a/Views/VehicleControlStations/Index.cshtml
+++ b/Views/VehicleControlStations/Index.cshtml
@@ -11,8 +11,8 @@
 </p>
 <form asp-controller="VehicleControlStations" asp-action="Index">
     <p>
-        Title: <input type="text" name="SearchString">
-        <input type="submit" value="Filter" />
+        Wprowadź NIP: <input type="text" name="SearchString">
+        <input type="submit" value="Filtruj po NIP" />
     </p>
 </form>
 <table class="table">
